--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -40,11 +40,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/HERO.PNG");
 
   /* Set a specific height */
-  height: 50%;
-  width: auto;
+  height: 40%;
+  width: 80%;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
